tests/non-exhaustive-match/out.txt
error: non-exhaustive match
  ┌─ err.sml:2:8
  │
2 │   case 3 of
  │        ^

typechecking failed
